# Camera-Calibration-using-Ceres-Solver

./: .gitignore  CMakeLists.txt  README.md  clang-format.txt  config.yaml  config_fisheye.yaml  config_fisheye_2.yaml
config/: config_calibration_battery.yaml  config_intrinsic.yaml  config_xycar_fisheye.yaml
examples/: calibration_implement.cpp  camera_intrinsic.cpp  save_undistorted_images.cpp
modules/: CMakeLists.txt
modules/Calibration/: CMakeLists.txt
modules/Calibration/include/Calibration/: Calibration.h  CeresOptimizer.h
modules/Calibration/src/: Calibration.cpp  CeresOptimizer.cpp
result/: intrinsic.yaml
src/: calibration.cpp  get_Rt_vectors.cpp  homography.cpp  imshow.py  intrinsic.cpp  save_undistorted_image.cpp
